--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "express-session": "^1.17.3",
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^3.0.3",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.9",
-    "@prisma/client": "^5.0.0",
+    "express": "^4.21.2",
+    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "puppeteer": "^21.0.0"
   },
   "devDependencies": {
-    "prisma": "^5.0.0"
+    "nodemon": "^3.1.11",
+    "prisma": "^5.22.0"
   }
 }
